fix: overlapping components

--- a/src/index.css
+++ b/src/index.css
@@ -171,9 +171,12 @@ body {
   width: 30%;
 }
 .search-bar {
+  position: relative;
   display: flex;
+  flex-direction: column;
   width: 100%;
   padding: 2% 28%;
+  flex-direction: column;
 }
 
 .search-bar > input {
@@ -190,7 +193,20 @@ body {
   border-top-right-radius: 0px;
   border-bottom-right-radius: 0px;
   font-family: 'Josefin Sans', sans-serif;
+  
 }
+.country-suggestions {
+  /* position: absolute;  */
+  top: 100%; 
+  /* left: 0;  */
+  width: 100%; 
+  background-color: #ffffff; 
+  max-height: 210px; 
+  overflow-y: auto; 
+  z-index: 2; 
+  padding-top: 5px;
+}
+
 .s-icon {
   display: flex;
   align-items: center;
@@ -202,6 +218,8 @@ body {
   padding: 8px;
   color: var(--textColor);
   transition: all 0.5s ease;
+  margin-top: 10px;
+  z-index: 0;
 }
 .s-icon:hover {
   cursor: pointer;
@@ -253,6 +271,11 @@ body {
   /* margin-top:2px; */
   height:62px;
   color: #ffffff;
+  background-color:  var(--cardColor);
+  z-index: 2;
+  font-size: 1rem;
+  color: var(--textColor);
+
 }
 
 @media only screen and (max-width: 1024px) {
